--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 /* Tag selector to select the 'body' element */
-body {
+body { background: lightblue;
   /* Your code here! */
 }
 
 /* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
-div {
+div { width: 700px;
+  margin: auto;
+  font-family: "Helvetica Neue";
+  background: white;
+  padding: 30px;
   /* Your code here! */
 }
 
@@ -12,9 +16,10 @@ div {
 #main-header {
   /* Your code here! */
   color:red;
+  font-size: 22px;
 }
 
 /* Class selector to select elements containing the class 'perspective-questions' */
-.perspective-questions {
+.perspective-questions {font-style: italic;
   /* Your code here! */
 }
